--- a/client/src/components/LoginSignup.css
+++ b/client/src/components/LoginSignup.css
@@ -18,7 +18,7 @@
 }
 
 .text{
-    color: #B6ACD1;
+    color: #006838;
     font-size: 48px;
     font-weight: 700;
 }
@@ -26,7 +26,7 @@
 .underline{
     width: 61px;
     height: 6px;
-    background: #B6ACD1;
+    background: #006838;
     border-radius: 9px;
 }
 
@@ -69,7 +69,7 @@
 }
 
 .forgot-password span{
-    color: #B6ACD1;
+    color: #55833D;
     cursor: pointer;
 }
 
@@ -86,7 +86,7 @@
     width: 160px;
     height: 50px;
     color: #fff;
-    background: #B6ACD1;
+    background: #55833D;
     border-radius: 50px;
     font-size: 19px;
     font-weight: 700;
