--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @font-face {
+    font-family: 'League';
+    font-style: bold;
+    font-weight: 800;
+    font-display: swap;
+    src: url('.\assets\fonts\LeagueSpartan-VariableFont_wght.ttf');
+  }
+}
+
 .logo
 {
     max-width: 10%;
@@ -15,7 +25,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     /* height: 100vh; */
-    background: linear-gradient(#E4E0EE,#C3DAD0);
+    /* background: linear-gradient(#E4E0EE,#C3DAD0); */
   }
   
   code {
