--- a/client/src/components/LoginSignup.css
+++ b/client/src/components/LoginSignup.css
@@ -1,43 +1,43 @@
-.container{
+.container {
     display: flex;
     flex-direction: column;
     margin: auto;
     margin-top: 50px;
-    width: 300px;
+    width: 500px;
     background: #fff;
     padding-bottom: 30px;
 }
 
-.header{
+.header {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 9px;
     width: 100%;
-    margin-top: 30px
+    margin-top: 30px;
 }
 
-.text{
+.text {
     color: #006838;
     font-size: 48px;
     font-weight: 700;
 }
 
-.underline{
+.underline {
     width: 61px;
     height: 6px;
     background: #006838;
     border-radius: 9px;
 }
 
-.inputs{
+.inputs {
     margin-top: 55px;
     display: flex;
     flex-direction: column;
     gap: 25px;
 }
 
-.input{
+.input {
     display: flex;
     align-items: center;
     margin: auto;
@@ -47,43 +47,44 @@
     border-radius: 6px;
 }
 
-.input img{
+.input img {
     margin: 0px 30px;
 }
 
-.input input{
+.input input {
     height: 50px;
     width: 400px;
     background: transparent;
     border: none;
     outline: none;
     color: #797979;
-    font-size: 19px
+    font-size: 19px;
 }
 
-.forgot-password{
+.forgot-password {
     padding-left: 62px;
     margin-top: 20px;
     color: #797979;
     font-size: 18px;
 }
 
-.forgot-password span{
+.forgot-password span {
     color: #55833D;
     cursor: pointer;
 }
 
-.submit-container{
+.submit-container {
     display: flex;
-    gap: 30px;
+    flex-direction: column;
+    gap: 20px;
     margin: 20px auto;
 }
 
-.submit{
+.submit {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 160px;
+    width: 480px;
     height: 50px;
     color: #fff;
     background: #55833D;
@@ -93,7 +94,21 @@
     cursor: pointer;
 }
 
-.gray{
+.google-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 480px;
+    height: 50px;
+    color: #fff;
+    background: #55833D;
+    border-radius: 50px;
+    font-size: 19px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.gray {
     background: #EAEAEA;
     color: #67676767;
 }
